--- a/PunctualExample/PunctualExample/Base.lproj/Main.storyboard
+++ b/PunctualExample/PunctualExample/Base.lproj/Main.storyboard
@@ -326,10 +326,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wednesday, March 14th, 2015" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xyW-bK-2cg">
+                                <rect key="frame" x="31" y="84" width="538" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rzQ-84-kxC">
-                                <rect key="frame" x="230" y="139" width="66" height="30"/>
+                                <rect key="frame" x="159" y="139" width="66" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="FMS-jk-Ckv"/>
+                                    <constraint firstAttribute="width" constant="66" id="Nao-Hm-kjV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -338,16 +344,13 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIZ-GZ-o9a">
-                                <rect key="frame" x="304" y="144" width="44" height="21"/>
+                                <rect key="frame" x="233" y="144" width="44" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YgD-4Z-7cS">
-                                <rect key="frame" x="230" y="177" width="66" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="QA2-CM-OyL"/>
-                                </constraints>
+                                <rect key="frame" x="159" y="177" width="66" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
@@ -355,15 +358,15 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YBs-c2-b2U">
-                                <rect key="frame" x="304" y="182" width="37" height="21"/>
+                                <rect key="frame" x="233" y="182" width="37" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBz-tO-NiB">
-                                <rect key="frame" x="230" y="215" width="66" height="30"/>
+                                <rect key="frame" x="292" y="139" width="66" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="Vln-Tw-2V2"/>
+                                    <constraint firstAttribute="width" constant="66" id="ihP-e0-VIN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -372,16 +375,13 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="months" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmY-zS-m4X">
-                                <rect key="frame" x="304" y="220" width="58" height="21"/>
+                                <rect key="frame" x="366" y="144" width="58" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pcc-SA-G7b">
-                                <rect key="frame" x="230" y="253" width="66" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="MJM-Us-MOQ"/>
-                                </constraints>
+                                <rect key="frame" x="292" y="177" width="66" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
@@ -389,39 +389,35 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="years ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Tb-U8-y6a">
-                                <rect key="frame" x="304" y="258" width="75" height="21"/>
+                                <rect key="frame" x="366" y="182" width="75" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wednesday, March 14th, 2015" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyW-bK-2cg">
-                                <rect key="frame" x="41" y="84" width="518" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pcc-SA-G7b" firstAttribute="centerY" secondItem="4Tb-U8-y6a" secondAttribute="centerY" id="2fQ-rQ-jxG"/>
-                            <constraint firstItem="rzQ-84-kxC" firstAttribute="centerY" secondItem="QIZ-GZ-o9a" secondAttribute="centerY" id="6RW-oI-Oih"/>
-                            <constraint firstItem="eBz-tO-NiB" firstAttribute="top" secondItem="YgD-4Z-7cS" secondAttribute="bottom" constant="8" id="9RC-yp-O5T"/>
-                            <constraint firstItem="rzQ-84-kxC" firstAttribute="top" secondItem="xyW-bK-2cg" secondAttribute="bottom" constant="25" id="BCx-K2-bXj"/>
-                            <constraint firstItem="4Tb-U8-y6a" firstAttribute="leading" secondItem="pcc-SA-G7b" secondAttribute="trailing" constant="8" id="BpI-pa-wQx"/>
-                            <constraint firstAttribute="centerX" secondItem="rzQ-84-kxC" secondAttribute="centerX" constant="37" id="C3o-lZ-c0E"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xyW-bK-2cg" secondAttribute="trailing" constant="25" id="E9b-hu-VFP"/>
-                            <constraint firstItem="YgD-4Z-7cS" firstAttribute="top" secondItem="rzQ-84-kxC" secondAttribute="bottom" constant="8" id="GbF-2Z-NLz"/>
-                            <constraint firstItem="YgD-4Z-7cS" firstAttribute="centerY" secondItem="YBs-c2-b2U" secondAttribute="centerY" id="IFA-uF-uxi"/>
-                            <constraint firstItem="pcc-SA-G7b" firstAttribute="centerX" secondItem="eBz-tO-NiB" secondAttribute="centerX" id="KEb-uO-7oq"/>
-                            <constraint firstItem="eBz-tO-NiB" firstAttribute="centerY" secondItem="QmY-zS-m4X" secondAttribute="centerY" id="OJX-D4-jTH"/>
-                            <constraint firstItem="YgD-4Z-7cS" firstAttribute="centerX" secondItem="rzQ-84-kxC" secondAttribute="centerX" id="SkO-B2-zBa"/>
-                            <constraint firstItem="QmY-zS-m4X" firstAttribute="leading" secondItem="eBz-tO-NiB" secondAttribute="trailing" constant="8" id="WrQ-Sz-Tb7"/>
-                            <constraint firstItem="eBz-tO-NiB" firstAttribute="centerX" secondItem="YgD-4Z-7cS" secondAttribute="centerX" id="doc-ES-adJ"/>
-                            <constraint firstItem="pcc-SA-G7b" firstAttribute="top" secondItem="eBz-tO-NiB" secondAttribute="bottom" constant="8" id="hJR-RE-s2X"/>
-                            <constraint firstItem="YBs-c2-b2U" firstAttribute="leading" secondItem="YgD-4Z-7cS" secondAttribute="trailing" constant="8" id="kjZ-nE-sev"/>
-                            <constraint firstItem="xyW-bK-2cg" firstAttribute="leading" secondItem="WW1-ST-8Nf" secondAttribute="leadingMargin" constant="25" id="r68-OK-04e"/>
-                            <constraint firstItem="QIZ-GZ-o9a" firstAttribute="leading" secondItem="rzQ-84-kxC" secondAttribute="trailing" constant="8" id="sdt-Br-fZJ"/>
+                            <constraint firstItem="4Tb-U8-y6a" firstAttribute="leading" secondItem="pcc-SA-G7b" secondAttribute="trailing" constant="8" symbolic="YES" id="0qx-cS-pCz"/>
+                            <constraint firstItem="YBs-c2-b2U" firstAttribute="leading" secondItem="YgD-4Z-7cS" secondAttribute="trailing" constant="8" symbolic="YES" id="20w-AI-3ws"/>
+                            <constraint firstItem="YgD-4Z-7cS" firstAttribute="top" secondItem="rzQ-84-kxC" secondAttribute="bottom" constant="8" symbolic="YES" id="9Us-3K-fjn"/>
+                            <constraint firstItem="rzQ-84-kxC" firstAttribute="top" secondItem="xyW-bK-2cg" secondAttribute="bottom" constant="25" id="9qi-9c-cXT"/>
+                            <constraint firstItem="QmY-zS-m4X" firstAttribute="leading" secondItem="eBz-tO-NiB" secondAttribute="trailing" constant="8" symbolic="YES" id="BUg-gP-MDb"/>
+                            <constraint firstItem="YBs-c2-b2U" firstAttribute="centerY" secondItem="YgD-4Z-7cS" secondAttribute="centerY" id="ChM-tA-bNY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xyW-bK-2cg" secondAttribute="trailing" constant="15" id="Eop-VJ-dLU"/>
+                            <constraint firstItem="YBs-c2-b2U" firstAttribute="baseline" secondItem="4Tb-U8-y6a" secondAttribute="baseline" id="J9a-fv-4Ph"/>
+                            <constraint firstItem="QIZ-GZ-o9a" firstAttribute="leading" secondItem="YBs-c2-b2U" secondAttribute="leading" id="LEd-2a-9QA"/>
+                            <constraint firstItem="QmY-zS-m4X" firstAttribute="leading" secondItem="4Tb-U8-y6a" secondAttribute="leading" id="Nuj-j1-qaD"/>
+                            <constraint firstItem="pcc-SA-G7b" firstAttribute="baseline" secondItem="YgD-4Z-7cS" secondAttribute="baseline" id="SC4-nC-w8I"/>
+                            <constraint firstItem="eBz-tO-NiB" firstAttribute="leading" secondItem="pcc-SA-G7b" secondAttribute="leading" id="TjT-KG-NXT"/>
+                            <constraint firstItem="QIZ-GZ-o9a" firstAttribute="centerY" secondItem="rzQ-84-kxC" secondAttribute="centerY" id="Zd9-Gh-WyC"/>
+                            <constraint firstItem="eBz-tO-NiB" firstAttribute="leading" secondItem="QIZ-GZ-o9a" secondAttribute="trailing" constant="15" id="bl8-as-WQA"/>
+                            <constraint firstItem="xyW-bK-2cg" firstAttribute="leading" secondItem="WW1-ST-8Nf" secondAttribute="leadingMargin" constant="15" id="dUy-4V-IwJ"/>
+                            <constraint firstItem="QIZ-GZ-o9a" firstAttribute="baseline" secondItem="QmY-zS-m4X" secondAttribute="baseline" id="o9Q-S4-XtG"/>
+                            <constraint firstItem="QIZ-GZ-o9a" firstAttribute="leading" secondItem="rzQ-84-kxC" secondAttribute="trailing" constant="8" symbolic="YES" id="pXh-tg-Vy2"/>
+                            <constraint firstAttribute="centerX" secondItem="rzQ-84-kxC" secondAttribute="centerX" constant="108" id="qfa-OW-ec0"/>
+                            <constraint firstItem="YgD-4Z-7cS" firstAttribute="leading" secondItem="rzQ-84-kxC" secondAttribute="leading" id="tzC-nn-LS2"/>
                             <constraint firstItem="xyW-bK-2cg" firstAttribute="top" secondItem="cWB-Km-NbP" secondAttribute="bottom" constant="20" id="vTl-z3-zIV"/>
+                            <constraint firstItem="eBz-tO-NiB" firstAttribute="baseline" secondItem="rzQ-84-kxC" secondAttribute="baseline" id="zEc-VS-EXK"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RnB-xJ-CWf"/>
